<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    android:id="@+id/linLayout1"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_weight=".3"
        android:layout_height="0dp"
        android:gravity="center"
        android:id="@+id/createDetailPageTitle"
        android:text="@string/createDetailsTitleText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    <EditText android:id="@+id/input_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/deedDescription"
        android:textColor="#FFFFFF" />

    <EditText android:id="@+id/input_point_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/goodDeedPoints"
        android:textColor="#FFFFFF" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/input_expiration_date"
        android:hint="@string/expirationDate"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_weight=".1"
        android:layout_height="0dp"
        android:gravity="center"
        android:id="@+id/deedLocationText"
        android:text="@string/deedLocation"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/mapFragment"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.6" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/linLayout6"
        android:weightSum="1">

        <Button
            android:id="@+id/cancelButton"
            android:text="@string/cancelButtonText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".50"
            android:onClick="gotoMenu"/>

        <Button
            android:id="@+id/acceptButton"
            android:text="@string/acceptButtonText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".50"
            android:onClick="gotoMenu"/>

    </LinearLayout>

</LinearLayout>