<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green"
    android:id="@+id/linLayout1"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_weight=".1"
        android:layout_height="0dp"
        android:gravity="center"
        android:id="@+id/detailsPageTitle"
        android:text="@string/detailsPageTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight=".1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/linLayout2"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/postedBy"
            android:text="@string/postedByText"
            android:textColor="#ffffff" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/userText"
            android:text="@string/userText"
            android:textColor="#ffffff" />

        <ImageView
            android:id="@+id/hearLogo"
            android:layout_gravity="left"
            android:background="@drawable/heart"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/myPointsText"
            android:text="@string/myPointsText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_weight=".10"
        android:layout_height="0dp"
        android:gravity="center"
        android:id="@+id/detailsTitle"
        android:text="@string/detailsTitleText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_weight=".2"
        android:layout_height="0dp"
        android:gravity="center"
        android:id="@+id/detailText"
        android:text="@string/detailText"
        android:textColor="#ffffff" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight=".3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/linLayout3"
        android:weightSum="1">

        <fragment
            class="com.google.android.gms.maps.MapFragment"
            android:id="@+id/map"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/linLayout4"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_weight=".3"
                android:layout_height="0dp"
                android:gravity="center"
                android:id="@+id/addressText"
                android:text="@string/addressText"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_weight=".3"
                android:layout_height="0dp"
                android:gravity="center"
                android:id="@+id/address2Text"
                android:text="@string/address2Text"
                android:textColor="#ffffff" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_weight=".4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/linLayout5"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/mailLogo"
                    android:background="@drawable/mail"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/emailText"
                    android:text="@string/emailText"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_weight=".10"
            android:layout_height="0dp"
            android:gravity="center"
            android:id="@+id/availablePoints"
            android:text="@string/availablePointsText"
            android:textSize="20dp"
            android:textColor="#ffffff" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight=".10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/linLayout6"
        android:weightSum="1">

        <Button
            android:id="@+id/declineButton"
            android:text="@string/declineButtonText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".50"
            android:onClick="gotoMenu"/>

        <Button
            android:id="@+id/acceptButton"
            android:text="@string/acceptButtonText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".50"
            android:onClick="gotoMenu"/>

    </LinearLayout>

</LinearLayout>

