<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detail_screen"
    android:id="@+id/linLayout1"
    android:weightSum="1">

        <ImageView android:src="@drawable/gd_logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".3"/>

        <!-- firstName Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1">
            <android.support.design.widget.TextInputEditText android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/first_name"
                android:textColor="#FFFFFF" />
        </android.support.design.widget.TextInputLayout>

        <!-- lastName Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/last_name"
                android:textColor="#FFFFFF" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/email_address"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true" />
        </android.support.design.widget.TextInputLayout>

        <!--  password1 Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="#FFFFFF"
                android:password="true"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- password2 Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textColor="#FFFFFF"
                android:inputType="textPassword"
                android:elegantTextHeight="true" />
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:text="Create Account"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:text="Already a member? Login"
            android:gravity="center"
            android:textSize="16dip"/>

</LinearLayout>