<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red"
    android:id="@+id/linLayout11"
    android:weightSum="1">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_gravity="left"
            android:background="@drawable/gd_logo"
            android:layout_weight=".2"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <fragment
            class="com.google.android.gms.maps.MapFragment"
            android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/appLogo"/>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:layout_below="@id/map"
            android:id="@+id/deedList"
            android:background="#3D3D3D" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:layout_below="@id/map"
            android:id="@+id/linLayout13"
            android:weightSum="1">


            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:layout_below="@id/map"
                android:id="@+id/linLayout14"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight=".5"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:id="@+id/myPointsTitle"
                    android:text="@string/myPointsTitleText"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff" />


                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:id="@+id/linLayout15"
                    android:weightSum="1">

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".3"/>

                    <ImageView
                        android:id="@+id/heartLogo"
                        android:layout_gravity="left"
                        android:background="@drawable/heart"
                        android:layout_marginBottom="5dp"
                        android:layout_weight=".2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/myPoints"
                        android:text="@string/myPointsText"
                        android:textSize="50sp"
                        android:textStyle="bold"
                        android:textColor="#ffffffff" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/menuButton"
                android:text="@string/menuButtonText"
                android:layout_marginTop="30dp"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".30"
                android:onClick="gotoMenu"/>
        </LinearLayout>
    </LinearLayout>

